edition = "2023";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/equipment_type.proto";

// Corresponds to the `ExtendedSerialNumber` data type in the Data Dictionary, Section 2.72.
//
// ASN.1 Specification:
//
//     ExtendedSerialNumber ::= SEQUENCE {
//         serialNumber INTEGER(0..2^32-1),
//         monthYear BCDString(SIZE(2)),
//         type EquipmentType,
//         manufacturerCode ManufacturerCode
//     }
message ExtendedSerialNumber {
  // A serial number for the equipment, unique for the manufacturer, type, and date.
  //
  // ASN.1 Specification:
  //
  //     serialNumber INTEGER(0..2^32-1)
  uint32 serial_number = 1;

  // The month and year of manufacturing or serial number assignment (BCD encoded).
  //
  // ASN.1 Specification:
  //
  //     monthYear BCDString(SIZE(2))
  bytes month_year = 2;

  // The type of equipment.
  //
  // ASN.1 Specification:
  //
  //     type EquipmentType
  EquipmentType type = 3;

  // The numerical code of the manufacturer.
  //
  // ASN.1 Specification:
  //
  //     manufacturerCode ManufacturerCode
  int32 manufacturer_code = 4;
}
