syntax = "proto3";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/encoding.proto";

// StringValue provides a canonical representation for various string types
// found in the tachograph regulations that have special encoding rules.
//
// Many ASN.1 types in the specification, such as `Name` (DD 2.99) and
// `Address` (DD 2.2), are defined as a `SEQUENCE` containing a numeric
// code page and an octet string. Other types, like `IA5String`, have a
// fixed encoding (ASCII) and may include padding.
//
// This message solves the problem of representing these types faithfully
// by storing both the original raw bytes and the corresponding encoding
// information. This ensures that data can be unmarshalled for use and
// then marshalled back to its exact original binary format without data loss.
message StringValue {
  // The character encoding of the 'encoded' bytes.
  Encoding encoding = 1;

  // The raw, original byte representation of the string.
  bytes encoded = 2;

  // A user-friendly, UTF-8 representation of the string, generated by
  // decoding and trimming the 'encoded' bytes. This field is for display
  // and consumption purposes (e.g., in JSON) and SHOULD be ignored when
  // marshalling.
  string decoded = 3;
}